--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
   <title>the pridge travel</title>
   <!-- Google Tag Manager -->
   <script>
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-KL82QXJX');
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-KL82QXJX');
   </script>
   <!-- End Google Tag Manager -->
+  <!-- Reacaptha Script -->
+  <script src="https://www.google.com/recaptcha/api.js?render=6LfIIlosAAAAAHRgtKRZukpyIIWDKTKIAOHvD5tc"></script>
+  <!-- Reacaptha Script -->
 </head>
 
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KL82QXJX"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KL82QXJX" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe>
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
 
