--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>the pridge travel</title>
+  <title>the bridge travel</title>
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
