--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>the bridge travel</title>
+  <title>The Bridge Travel</title>
+  <meta name="description" content="Luxury Egypt tours, private Nile cruises, and Red Sea holidays. Explore Cairo, Luxor, and Aswan with confidence through The Bridge Travel.">
+
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
