--- a/index.html
+++ b/index.html
@@ -7,6 +7,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Bridge Travel</title>
   <meta name="description" content="Luxury Egypt tours, private Nile cruises, and Red Sea holidays. Explore Cairo, Luxor, and Aswan with confidence through The Bridge Travel.">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Mohammed Reiad, https://mreiad.com">
+  <meta name="publisher" content="The Bridge Travel">
+
+<!-- Schema Markup -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "TravelAgency",
+  "name": "The Bridge Travel",
+  "url": "https://thebridgetravel.com/",
+  "logo": "https://thebridgetravel.com/logo.png",
+  "description": "Luxury Egypt tours and private Nile cruises designed for travelers from the USA, UK, and Australia.",
+  "areaServed": [
+    {
+      "@type": "Country",
+      "name": "United States"
+    },
+    {
+      "@type": "Country",
+      "name": "United Kingdom"
+    },
+    {
+      "@type": "Country",
+      "name": "Australia"
+    }
+  ],
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Cairo",
+    "addressCountry": "EG"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+20-122-772-2233",
+    "contactType": "customer service",
+    "areaServed": "US",
+    "availableLanguage": "English"
+  }
+}
+</script>
+
+<!-- hreflang Setup en-US / en-GB / en-AU -->
+<link rel="alternate" hreflang="en-us" href="https://thebridgetravel.com/" />
+<link rel="alternate" hreflang="en-gb" href="https://thebridgetravel.com/" />
+<link rel="alternate" hreflang="en-au" href="https://thebridgetravel.com/" />
+<link rel="alternate" hreflang="x-default" href="https://thebridgetravel.com/" />
 
   <!-- Google Tag Manager -->
   <script>
