feat: Implement core application layout components including Navbar, Footer, HeroSlider, and FeaturedExperiences, along with foundational styling.

--- a/index.html
+++ b/index.html
@@ -6,76 +6,81 @@
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Bridge Travel</title>
-  <meta name="description" content="Luxury Egypt tours, private Nile cruises, and Red Sea holidays. Explore Cairo, Luxor, and Aswan with confidence through The Bridge Travel.">
+  <meta name="description"
+    content="Luxury Egypt tours, private Nile cruises, and Red Sea holidays. Explore Cairo, Luxor, and Aswan with confidence through The Bridge Travel.">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Mohammed Reiad, https://mreiad.com">
   <meta name="publisher" content="The Bridge Travel">
 
- <!-- Canonical Link --> 
- <link rel="canonical" href="" id="canonical-link">
+  <!-- Google Fonts Preconnect -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+    rel="stylesheet">
 
-<script>
-  (function () {
-    var link = document.getElementById('canonical-link');
-    var url = window.location.origin + window.location.pathname;
-    link.setAttribute('href', url.replace(/\/$/, '') || window.location.origin + '/');
-  })();
-</script>
- 
-<!-- Schema Markup -->
+  <!-- Canonical Link -->
+  <link rel="canonical" href="" id="canonical-link">
+
+  <script>
+    (function () {
+      var link = document.getElementById('canonical-link');
+      var url = window.location.origin + window.location.pathname;
+      link.setAttribute('href', url.replace(/\/$/, '') || window.location.origin + '/');
+    })();
+  </script>
+
+  <!-- Schema Markup -->
   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "TravelAgency",
-  "name": "The Bridge Travel",
-  "url": "https://thebridgetravel.com/",
-  "logo": "https://thebridgetravel.com/logo.png",
-  "description": "Luxury Egypt tours and private Nile cruises designed for travelers from the USA, UK, and Australia.",
-  "areaServed": [
-    {
-      "@type": "Country",
-      "name": "United States"
+  {
+    "@context": "https://schema.org",
+    "@type": "TravelAgency",
+    "name": "The Bridge Travel",
+    "url": "https://thebridgetravel.com/",
+    "logo": "https://thebridgetravel.com/logo.png",
+    "description": "Luxury Egypt tours and private Nile cruises designed for travelers from the USA, UK, and Australia.",
+    "areaServed": [
+      {
+        "@type": "Country",
+        "name": "United States"
+      },
+      {
+        "@type": "Country",
+        "name": "United Kingdom"
+      },
+      {
+        "@type": "Country",
+        "name": "Australia"
+      }
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Cairo",
+      "addressCountry": "EG"
     },
-    {
-      "@type": "Country",
-      "name": "United Kingdom"
-    },
-    {
-      "@type": "Country",
-      "name": "Australia"
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+20-122-772-2233",
+      "contactType": "customer service",
+      "areaServed": "US",
+      "availableLanguage": "English"
     }
-  ],
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Cairo",
-    "addressCountry": "EG"
-  },
-  "contactPoint": {
-    "@type": "ContactPoint",
-    "telephone": "+20-122-772-2233",
-    "contactType": "customer service",
-    "areaServed": "US",
-    "availableLanguage": "English"
   }
-}
-</script>
+  </script>
 
-<!-- hreflang Setup en-US / en-GB / en-AU -->
-<link rel="alternate" hreflang="en-us" href="https://thebridgetravel.com/" />
-<link rel="alternate" hreflang="en-gb" href="https://thebridgetravel.com/" />
-<link rel="alternate" hreflang="en-au" href="https://thebridgetravel.com/" />
-<link rel="alternate" hreflang="x-default" href="https://thebridgetravel.com/" />
+  <!-- hreflang Setup en-US / en-GB / en-AU -->
+  <link rel="alternate" hreflang="en-us" href="https://thebridgetravel.com/" />
+  <link rel="alternate" hreflang="en-gb" href="https://thebridgetravel.com/" />
+  <link rel="alternate" hreflang="en-au" href="https://thebridgetravel.com/" />
+  <link rel="alternate" hreflang="x-default" href="https://thebridgetravel.com/" />
 
   <!-- Google Tag Manager -->
+  <script async src="https://www.googletagmanager.com/gtm.js?id=GTM-KL82QXJX"></script>
   <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-KL82QXJX');
+    window.dataLayer = window.dataLayer || [];
+    window.dataLayer.push({
+      'gtm.start': new Date().getTime(),
+      event: 'gtm.js'
+    });
   </script>
   <!-- End Google Tag Manager -->
 
