--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
     rel="stylesheet">
+  <link rel="preload" as="image" href="/images/Egyptian-Museum-01.webp" fetchpriority="high">
 
   <!-- Canonical Link -->
   <link rel="canonical" href="" id="canonical-link">
